[package]
name = "udp2p"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrew N. Smith <asmith@vrrb.io>"]
description = "The peer discovery package of the udp2p library, used for discovering peers in a peer to peer network"
documentation = "https://doc.rs/udp2p_discovery/0.1.0/udp2p"
readme = "README.md"


[lib]
name = "udp2p"
path = "src/lib.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["full"]}
ritelinked = "0.3.2"
hex = "0.4.3"
log = "0.4.14"
public-ip = "0.2.1"
sha256 = "1.0.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }